# GrammarBuddy

./: .dockerignore  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: config.py  main.py  version_info.py
backend/app/config/lessons/: past_simple.json  present_continuous.json  present_simple.json
backend/app/prompts/: grammar_teacher.txt  news_dialogue.txt  news_wrap_up.txt
backend/app/schemas/: gpt_response.py  lesson.py  messages.py  news.py
backend/app/services/: asr.py  grammar_qwen.py  lesson_loader.py  news_chat.py  news_fetch.py  news_history.py  news_text.py  repeat_match.py  tts.py  tts_segments.py
backend/app/session/: manager.py  questions.py  state.py
backend/app/ws/: client_info.py  handler.py  messaging.py  news_handler.py  router.py
deploy/: .env.build.example  deploy.sh  mysite-nginx-map.conf  mysite-nginx-snippet.conf  nginx.conf  setup-docker-mirror.sh  setup-first-time.sh  verify.sh
docs/: deploy-production.md  launcher_integration_v0.2.md  local_mvp_solution_v0.1.md  m5stack_ai_core_design_full_v0.1.md  m5stack_stopwatch_ui_spec_v0.1.md  qwen_api_stack_survey_v0.1.md  three_client_solution_v0.4.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/components/esp_wifi_connect/: CMakeLists.txt  wifi_configuration_ap.cc
firmware/components/esp_wifi_connect/assets/: wifi_configuration.html
firmware/components/grammarbuddy_config/: CMakeLists.txt  grammarbuddy_config.cpp
firmware/components/grammarbuddy_config/include/: grammarbuddy_config.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/main/apps/: apps_platform.h
firmware/main/apps/app_grammabuddy/: app_grammabuddy.cpp  app_grammabuddy.h
firmware/main/apps/app_grammabuddy/model/: nvs_config.cpp  nvs_config.h  tts_player.cpp  tts_player.h  ws_client.cpp  ws_client.h
firmware/main/apps/app_grammabuddy/view/: home_view.cpp  home_view.h
firmware/scripts/: check_fifawatch.ps1
frontend/: .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  GrammarApp.tsx  NewsApp.tsx  NewsHistoryApp.tsx  ThemeHome.tsx  index.css
frontend/src/components/: AsrDisplay.tsx  ClimbingStairsLoader.tsx  ConversationTranscript.tsx  DeviceModeBadge.tsx  HighlightedFeedback.tsx  HighlightedText.tsx  MicLevelMeter.tsx  RepeatCuePanel.tsx  RoundChatLog.tsx  RoundScreen.tsx  SideControls.tsx  WrapUpPanel.tsx
frontend/src/hooks/: useAudioCapture.ts  useAudioPlayer.ts  useChatLog.ts  useMicLevel.ts  useSpeechRecognition.ts  useWebSocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: basePath.ts  clientInfo.ts  deviceMode.ts  ttsAudio.ts
shared/: README.md
shared/design-tokens/: stopwatch-theme.json
shared/protocol/: actions.json  states.json  ws-envelope.schema.json
shared/ui-contract/: input-map.yaml  shake-config.json
shared/version/: compatibility.json
